Ingress/tls/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - harishtls.cf
    - harishtls.cf
    secretName: echo-tls
  rules:
  - host: harishtls.cf
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: harishtls.cf
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
